# advent_of_code

./: .gitignore
2024/: .env  Cargo.toml
2024/aoc_utils/: Cargo.toml
2024/aoc_utils/src/: display.rs  lib.rs  parsing.rs
2024/day-1/: Cargo.toml
2024/day-10/: Cargo.toml
2024/day-10/src/: dfs.rs  lib.rs  part1.rs  part2.rs
2024/day-5/src/: lib.rs  part1.rs  part2.rs  topo.rs
2024/day-6/: path1.txt
2024/day-6/src/: part1.rs  part2.rs
2024/day-7/: Cargo.toml
2024/day-7/src/: bfs.rs  lib.rs  part1.rs  part2.rs
2024/day-8/src/: part1.rs  part2.rs
2024/day-9/src/: part1.rs  part2.rs
2024/src/: main.rs
2024/src/day_1/: day_1.rs
2024/src/day_2/: day_2.rs
2024/src/day_3/: day_3.rs
2024_/: Cargo.toml
2024_/src/: day_3.rs  day_4.rs  lib.rs  main.rs
